Certificate Design & alignments  Fixed

--- a/exam/certificate.css
+++ b/exam/certificate.css
@@ -25,7 +25,8 @@ img{
 .name{
     font-size:2em;
     position: relative;
-    left: 2em;
+    align-items: center;
+    text-align: center;
 }
 .para{
     font-size: 1em;
